Update global CSS to fix overflow issue and improve page layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,10 +17,13 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+
   }
 }
 
 body {
+  overflow-x: no-scroll;
+  width: 100vw;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
